# pyaerial

./: .zenodo.json  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: build.yml  release.yml  tests.yml
aerial/: __init__.py  data_preparation.py  discretization.py  model.py  rule_extraction.py  rule_quality.py  table.py
benchmark/: compare.py  rule_quality.py  run.py  scalability.py
benchmark/results/: pyaerial_1.0.26.json  pyaerial_1.0.27.json  pyaerial_1.0.28.json  pyaerial_1.0.29.json  pyaerial_1.1.json
docs/source/: api_reference.md  citation.md  conf.py  configuration.md  getting_started.md  index.rst  parameter_guide.md  research.md  user_guide.md
notebooks/: quickstart.ipynb
tests/: test_aerial.py  test_autoencoder.py  test_data_discretization.py  test_one_hot_encoding.py  test_robustness.py  test_rule_extraction.py  test_rule_quality.py
