[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaerial"
version = "0.3.0"
description = "An implementation of the Aerial neurosymbolic association rule mining algorithm from tabular datasets."
readme = "README.md"
authors = [
    { name = "ANONYMOUS SUBMISSION", email = "ANONYMOUS SUBMISSION" }
]
license = { text = "MIT" }
dependencies = [
    "torch~=2.7.0",
    "numpy~=2.2.5",
    "joblib~=1.4.2",
    "setuptools~=76.0.0",
    "pytest~=8.3.5"
]
requires-python = ">=3.7"

[project.urls]
Homepage = "ANONYMOUS"
Documentation = "ANONYMOUS"
Source = "ANONYMOUS"
Tracker = "ANONYMOUS"
