[build-system]
requires = ["setuptools>=62", "setuptools-scm[toml]>=8.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pyaerial"
dynamic = ["version"]
description = "An implementation of the Aerial neurosymbolic association rule mining algorithm from tabular datasets."
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "Erkan Karabulut", email = "e.karabulut@uva.nl" }
]
license-files = ["LICENSE"]

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0",
    "joblib>=1.3.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0"
]
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0"
]

[tool.setuptools_scm]
# Optionally write a version file your package can import:
write_to = "aerial/_version.py"

[tool.setuptools.packages.find]
include = ["aerial"]

[project.urls]
Homepage = "https://github.com/DiTEC-project/pyaerial"
Documentation = "https://github.com/DiTEC-project/pyaerial"
Source = "https://github.com/DiTEC-project/pyaerial"
Tracker = "https://github.com/DiTEC-project/pyaerial/issues"
